<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnRacional"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="360dp"
        android:onClick="racionalizar"
        android:text="@string/btnRacional"
        app:layout_constraintStart_toEndOf="@+id/btnSqr"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSqr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="356dp"
        android:onClick="operacionEspecial"
        android:text="@string/btnSqr"
        app:layout_constraintStart_toEndOf="@+id/btnRoot"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/btnSqr" />

    <Button
        android:id="@+id/btnC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:onClick="C"
        android:text="@string/btnC"
        app:layout_constraintStart_toEndOf="@+id/btnCE"
        app:layout_constraintTop_toBottomOf="@+id/btnRoot" />

    <Button
        android:id="@+id/btnDiv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"
        android:onClick="agregarOperador"
        android:text="@string/btnDiv"
        app:layout_constraintStart_toEndOf="@+id/btnBorrar"
        app:layout_constraintTop_toBottomOf="@+id/btnRacional" />

    <Button
        android:id="@+id/btnMult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:onClick="agregarOperador"
        android:text="@string/btnMult"
        app:layout_constraintStart_toEndOf="@+id/btn9"
        app:layout_constraintTop_toBottomOf="@+id/btnDiv" />

    <Button
        android:id="@+id/btnInvertir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:onClick="invertir"
        android:text="@string/btnInvertir"
        app:layout_constraintEnd_toStartOf="@+id/btn0"
        app:layout_constraintTop_toBottomOf="@+id/btn1" />

    <Button
        android:id="@+id/btnPunto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:onClick="mostrarPunto"
        android:text="@string/btnPunto"
        app:layout_constraintStart_toEndOf="@+id/btn0"
        app:layout_constraintTop_toBottomOf="@+id/btn3" />

    <Button
        android:id="@+id/btn0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="636dp"
        android:onClick="mostrarNumero"
        android:text="Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSuma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"
        android:onClick="agregarOperador"
        android:text="@string/btnSuma"
        app:layout_constraintStart_toEndOf="@+id/btn3"
        app:layout_constraintTop_toBottomOf="@+id/btnResta" />

    <Button
        android:id="@+id/btnCE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:onClick="CE"
        android:text="@string/btnCE"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMod" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:onClick="mostrarNumero"
        android:text="Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn7" />

    <Button
        android:id="@+id/btnBorrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:onClick="borrar"
        android:text="@string/btnBorrar"
        app:layout_constraintStart_toEndOf="@+id/btnC"
        app:layout_constraintTop_toBottomOf="@+id/btnSqr" />

    <Button
        android:id="@+id/btnResta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:onClick="agregarOperador"
        android:text="@string/btnResta"
        app:layout_constraintStart_toEndOf="@+id/btn6"
        app:layout_constraintTop_toBottomOf="@+id/btnMult" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:onClick="mostrarNumero"
        android:text="Button"
        app:layout_constraintStart_toEndOf="@+id/btn7"
        app:layout_constraintTop_toBottomOf="@+id/btnC" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:onClick="mostrarNumero"
        android:text="Button"
        app:layout_constraintStart_toEndOf="@+id/btn4"
        app:layout_constraintTop_toBottomOf="@+id/btn8" />

    <Button
        android:id="@+id/btnRoot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="356dp"
        android:onClick="operacionEspecial"
        android:text="@string/btnRoot"
        app:layout_constraintStart_toEndOf="@+id/btnMod"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/btnRoot" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:onClick="mostrarNumero"
        android:text="Button"
        app:layout_constraintStart_toEndOf="@+id/btn5"
        app:layout_constraintTop_toBottomOf="@+id/btn9" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="572dp"
        android:onClick="mostrarNumero"
        android:text="Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="16dp"
        android:onClick="mostrarNumero"
        android:text="Button"
        app:layout_constraintBottom_toTopOf="@+id/btn0"
        app:layout_constraintStart_toEndOf="@+id/btn1" />

    <Button
        android:id="@+id/btnMod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="356dp"
        android:onClick="modular"
        android:text="@string/btnMod"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/btnMod" />

    <Button
        android:id="@+id/btn9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="mostrarNumero"
        android:text="Button"
        app:layout_constraintStart_toEndOf="@+id/btn8"
        app:layout_constraintTop_toBottomOf="@+id/btnBorrar" />

    <Button
        android:id="@+id/btn7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:onClick="mostrarNumero"
        android:text="Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCE" />

    <Button
        android:id="@+id/btnRes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:onClick="realizarOperacion"
        android:text="@string/btnRes"
        app:layout_constraintStart_toEndOf="@+id/btnPunto"
        app:layout_constraintTop_toBottomOf="@+id/btnSuma" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="Button"
        app:layout_constraintStart_toEndOf="@+id/btn2"
        app:layout_constraintTop_toBottomOf="@+id/btn6"
        android:onClick="mostrarNumero" />

    <EditText
        android:id="@+id/caja_num"
        android:layout_width="394dp"
        android:layout_height="110dp"
        android:ems="10"
        android:hint="numeros"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caja_op" />

    <EditText
        android:id="@+id/caja_op"
        android:layout_width="392dp"
        android:layout_height="50dp"
        android:layout_marginTop="136dp"
        android:ems="10"
        android:hint="operacion"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnMC"
        android:layout_width="67dp"
        android:layout_height="43dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="13dp"
        android:insetLeft="2dp"
        android:insetRight="2dp"
        android:onClick="MC"
        android:paddingHorizontal="2dp"
        android:text="@string/btnMC"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caja_num" />

    <Button
        android:id="@+id/btnMR"
        android:layout_width="65dp"
        android:layout_height="43dp"
        android:layout_marginTop="12dp"
        android:insetLeft="2dp"
        android:insetRight="2dp"
        android:onClick="memoria"
        android:paddingHorizontal="2dp"
        android:text="@string/btnMR"
        app:layout_constraintStart_toEndOf="@+id/btnMC"
        app:layout_constraintTop_toBottomOf="@+id/caja_num" />

    <Button
        android:id="@+id/btnMplus"
        android:layout_width="67dp"
        android:layout_height="43dp"
        android:layout_marginTop="12dp"
        android:insetLeft="2dp"
        android:insetRight="2dp"
        android:onClick="Mp"
        android:paddingHorizontal="2dp"
        android:text="@string/btnMplus"
        app:layout_constraintStart_toEndOf="@+id/btnMR"
        app:layout_constraintTop_toBottomOf="@+id/caja_num" />

    <Button
        android:id="@+id/btnMminus"
        android:layout_width="65dp"
        android:layout_height="43dp"
        android:layout_marginTop="13dp"
        android:insetLeft="2dp"
        android:insetRight="2dp"
        android:onClick="Mm"
        android:paddingHorizontal="2dp"
        android:text="@string/btnMminus"
        app:layout_constraintStart_toEndOf="@+id/btnMplus"
        app:layout_constraintTop_toBottomOf="@+id/caja_num" />

    <Button
        android:id="@+id/btnMS"
        android:layout_width="66dp"
        android:layout_height="41dp"
        android:layout_marginTop="14dp"
        android:insetLeft="2dp"
        android:insetRight="2dp"
        android:onClick="MS"
        android:paddingHorizontal="2dp"
        android:text="@string/btnMS"
        app:layout_constraintStart_toEndOf="@+id/btnMminus"
        app:layout_constraintTop_toBottomOf="@+id/caja_num" />

    <Button
        android:id="@+id/btnMhis"
        android:layout_width="66dp"
        android:layout_height="41dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="15dp"
        android:insetLeft="2dp"
        android:insetTop="4dp"
        android:insetRight="2dp"
        android:insetBottom="4dp"
        android:paddingHorizontal="2dp"
        android:text="@string/btnMhis"
        app:iconPadding="4dp"
        app:layout_constraintStart_toEndOf="@+id/btnMS"
        app:layout_constraintTop_toBottomOf="@+id/caja_num" />

</androidx.constraintlayout.widget.ConstraintLayout>